--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,25 @@
 # production
 /build
 
-# miscip
+# misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Firebase
+.firebase/
+firebase-debug.log
+firebase-debug.*.log
