--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expense-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://SidL340.github.io/expense-tracker",
+  "homepage": ".",
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.53.0",
+    "firebase": "^11.6.0",
     "framer-motion": "^11.5.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
